add changes on nyj file

--- a/nyj.html
+++ b/nyj.html
@@ -7,29 +7,33 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    <h2>Born A Crime</h2>
+    <h2> A Summary Of Born A Crime</h2>
+    <h2>By Trevor Noah</h2>
+
 <div class="paragraph">
-    <h3>Racism</h3> 
-    <p>Trevo Noah's paints a clear portrail of what it was like for him to grow-up during and afer apartheid in
-    <br>South Africa. His father was white, his mothers black and was called "colered". White and black
-    <br>interacting, besides in a working relationship was forbidden so Trevor even  existing was  
-   <br>proof of a significant crime. so that at times were force to shun and ignore him in order for
-    <br>them to survive. In chapter 1 The title "Born a Crime" refers to the fact that Trevor Noah was 
-    <br>born in South Africa during the apartheid era,when it was illegal for a black mother and a 
-    <br>white father to be together. He talks about how Patricia, his mother, was a strong, independent woman. 
-   <br>Trevor's early years and his connection with his mother are examined.Patricia gives 
-   <br>Trevor a strong sense of morality and independence despite the difficulties of poverty and apartheid.
-   <br>Through her bravery, resourcefulness, and navigating the oppressive system, she teaches Trevor important life skills.</p>
+<div id="summary">
+ <h3>Racism</h3> 
+ <p>Trevo Noah's paints a clear portrail of what it was like for him to grow-up during and afer apartheid in
+    South Africa. His father was white, his mothers black and was called "colered". White and black
+    interacting, besides in a working relationship was forbidden so Trevor even  existing was  
+   proof of a significant crime. so that at times were force to shun and ignore him in order for
+   them to survive. In chapter 1 The title "Born a Crime" refers to the fact that Trevor Noah was 
+   born in South Africa during the apartheid era,when it was illegal for a black mother and a 
+   white father to be together. He talks about how Patricia, his mother, was a strong, independent woman. 
+   Trevor's early years and his connection with his mother are examined.Patricia gives 
+   Trevor a strong sense of morality and independence despite the difficulties of poverty and apartheid.
+   Through her bravery, resourcefulness, and navigating the oppressive system, she teaches Trevor important life skills.</p>
 
      <h3>Religion</h3>
-      <p>For Noah's mother and, as he points out, a great deal of other disadvantaged peoples worldwide, religion is <br>
-       an essential supply of relief and significance, it not only keeps them hopeful in the face of their<br>
-       remarkable hardship but also enables them to succeed in the a colonial environment by <br>
-       adopting the practices of the settlers. As a devoted Christian,Noah's mother brings the family <br>
-       to three churches on Sundays, which take up the entire day. She seems to think that the more churches she attends,<br>
+      <p>For Noah's mother and, as he points out, a great deal of other disadvantaged peoples worldwide, religion is 
+       an essential supply of relief and significance, it not only keeps them hopeful in the face of their
+       remarkable hardship but also enables them to succeed in the a colonial environment by 
+       adopting the practices of the settlers. As a devoted Christian,Noah's mother brings the family 
+       to three churches on Sundays, which take up the entire day. She seems to think that the more churches she attends,
        the more blessings she would receive and the more probable it is that her prayers will be answered</p>
+</div>
+<div id="trevor"> <img src="images/noah.jpg" class="Trevor-image">  </div>
 
-     
 </div>
 </body>
 </html>
