--- a/todolist.html
+++ b/todolist.html
@@ -29,6 +29,7 @@
    <input type="text" id="input-box" placeholder="Add your task"/>
    <button onclick="addTask()">Add</button>
 </div>
+<li><a href="/nyj.html">A summary of Born a crime</a></li>
 <ul id="list-container">
 </ul>
 </div>
